# As-Rigid-As-Possible

./: .gitignore  CMakeLists.txt  Compute.h  README.md
arap/: ARAP_Compute.cpp  ARAP_Compute.h  Arap_Compute.cpp  Arap_Compute.h  Compute.cpp  Compute.h  VertexSelectionPlugin.cpp  VertexSelectionPlugin.h  main.cpp
nix/: CMakeLists.txt  default.nix
